# SpeechRecognition

./: .gitignore  README.md  pyproject.toml
