[tool.poetry]
name = "spich recognition"
version = "0.1.0"
description = ""
authors = ["DieNice <DailyPlanning@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.12.2"
mypy = "^0.940"
snoop = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
